// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rendering > snapshot > custom 1`] = `
<DocumentFragment>
  <div
    class="yozora-admonition yozora-admonition__container yozora-admonition__caution custom-class"
  >
    <div
      class="yozora-admonition__heading"
    >
      <span
        class="yozora-admonition__icon"
      >
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.3 4.5a2 2 0 0 1 3.4 0l7.1 12.3a2 2 0 0 1-1.7 3H4.9a2 2 0 0 1-1.7-3Z"
          />
          <path
            d="M12 9v4.5M12 16.5h.01"
          />
        </svg>
      </span>
      <span
        class="yozora-admonition__title"
      >
        CAUTION
      </span>
    </div>
    <div
      class="yozora-admonition__body"
    >
      <p>
        some text1
        <span>
          some text2
        </span>
      </p>
      <blockquote>
        some text3
      </blockquote>
    </div>
  </div>
</DocumentFragment>
`;

exports[`rendering > snapshot > default 1`] = `
<DocumentFragment>
  <div
    class="yozora-admonition yozora-admonition__container yozora-admonition__note"
  >
    <div
      class="yozora-admonition__heading"
    >
      <span
        class="yozora-admonition__icon"
      >
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="17"
            rx="2.5"
            width="15"
            x="4.5"
            y="3.5"
          />
          <path
            d="M8 8h8M8 12h8M8 16h4"
          />
        </svg>
      </span>
      <span
        class="yozora-admonition__title"
      >
        NOTE
      </span>
    </div>
    <div
      class="yozora-admonition__body"
    >
      <p>
        some text1
        <span>
          some text2
        </span>
      </p>
      <blockquote>
        some text3
      </blockquote>
    </div>
  </div>
</DocumentFragment>
`;
